sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value l
			if(plusPetit(getValeur(l+2),getValeur(l+1))){
                                               ^AlgBubbleSort1:9: error: not found: value l
				echange(getValeur(l+2),getValeur(l+1))
                                                  ^