sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var p:Int = getNombreValeurs() 
var j:Int = 0

while(p!=0){
		for (k<-0 to p-2){
			if(plusPetit(getValeur(l+2),getValeur(l+1))){
				echange(getValeur(l+2),getValeur(l+1))
			
			}
		}
		
	
      }
      p = p-1
}


